helloworld-demo/flask-nodeport.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-dep
  labels:
    app: flask-helloworld
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-helloworld
  template:
    metadata:
      labels:
        app: flask-helloworld
    spec:
      containers:
      - name: flask
        image: digitalocean/flask-helloworld:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-svc
  labels:
    app: flask-helloworld
spec:
  selector:
    app: flask-helloworld
  type: NodePort
  # type: LoadBalancer
  # externalIPs:
  # - 137.184.216.144
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30007
